--- a/style.css
+++ b/style.css
@@ -75,13 +75,12 @@ form button {
   border-bottom-right-radius: 10px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .books {
     display: grid;
     height: 40vh;
     width: 39vw;
     margin-bottom: 30px;
-
   }
 
   input {
@@ -90,6 +89,33 @@ form button {
 
   .books img {
     width: 39vw;
+  }
+
+  #main {
+    width: 100%;
+  }
+
+  .books p {
+    text-align: center;
+    line-height: 15px;
+    padding-left: 30px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .books {
+    display: grid;
+    height: 50vh;
+    width: 38vw;
+    margin-bottom: 30px;
+  }
+
+  input {
+    width: 70vw;
+  }
+
+  .books img {
+    width: 38vw;
   }
 
   #main {
