--- a/style.css
+++ b/style.css
@@ -43,9 +43,14 @@ main {
   background-color: white;
 }
 
+.books a {
+  line-height: 20px;
+}
+
 .books p {
   width: 19vw;
   margin: 10px 0;
+  line-height: 15px;
 }
 
 form {
@@ -78,7 +83,7 @@ form button {
 @media screen and (max-width: 768px) {
   .books {
     display: grid;
-    height: 40vh;
+    height: 45vh;
     width: 39vw;
     margin-bottom: 30px;
   }
@@ -98,7 +103,7 @@ form button {
   .books p {
     text-align: center;
     line-height: 15px;
-    padding-left: 30px;
+    padding-left: 70px;
   }
 }
 
@@ -106,16 +111,16 @@ form button {
   .books {
     display: grid;
     height: 50vh;
-    width: 38vw;
+    width: 35vw;
     margin-bottom: 30px;
   }
 
   input {
-    width: 70vw;
+    width: 50vw;
   }
 
   .books img {
-    width: 38vw;
+    width: 35vw;
   }
 
   #main {
@@ -125,6 +130,37 @@ form button {
   .books p {
     text-align: center;
     line-height: 15px;
-    padding-left: 30px;
+    padding-left: 20px;
+  }
+}
+
+@media screen and (max-width: 307px) {
+ .books {
+    height: 50vh;
+    width: 60vw;
+    margin-bottom: 30px;
+  }
+
+  input {
+    width: 50px;
+  }
+
+  .books img {
+    width: 60vw;
+  }
+
+  #main {
+    display: contents;
+    width: 100%;
+  }
+
+  .books p {
+    text-align: center;
+    line-height: 15px;
+    padding: 0px;
+  }
+
+  form button {
+    width: 50px;
   }
 }
